fixed bug blurred s2 svg in safari

--- a/css/desktop.style.scss
+++ b/css/desktop.style.scss
@@ -197,14 +197,71 @@
 
 
 	.s2 {
-
-		&__svg-perehod {
-			width: 100vw; /* 818px */
+		
+		.overlay {
 			display: block;
-			z-index: 2;
+			position: sticky;
+			width: calc(100vw + 4px);
+			height: calc(100vh + 4px);
+			top: -2px;
+			left: -2px;
+			z-index: 20;
+			overflow: hidden;
+			contain: layout;
+			pointer-events: none;
+			margin-top: -1px;
+			max-width: 100vw;
+
+			// margin-bottom: -100vh;
 		}
 
+		.overlay2 {
+			transform-origin: center;
+		}
+
+		.overlay svg {
+			contain: layout;
+			min-height: 101%;
+			min-width: 101%;
+			margin: 0 auto;
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%, -50%);
+		}
+		
+		&__wrapper {
+			position: relative;
+			// position: sticky;
+			width: 100vw; /* 818px */
+			height: 100vw;
+			// height:10vw;
+			// top:0px;
+			z-index: 2;
+			// overflow: hidden;
+		}
+
+		&__svg-perehod {
+			position: absolute;
+			width: 200vw;
+			height: 71.0998008vw;
+			max-width: 10000%;
+			max-height: 10000%;
+			display: block;
+			z-index: 2;
+			opacity: 0.8;
+			// top: 50%;  /* position the top  edge of the element at the middle of the parent */
+			// left: 50%; /* position the left edge of the element at the middle of the parent */
+			left: 50%;
+			transform: translateX(-50%);
+			// transform: scale(0.1);
+		
+		}
+
+
+
 		&__header {
+		
 			&--logo {
 				margin-top: 8.91927083vw; /* 274px */
 				width: 26.6276042vw; /* 818px */
