--- a/css/mobile.style.scss
+++ b/css/mobile.style.scss
@@ -162,10 +162,8 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	overflow: hidden;
 
-	&__svg-perehod {
-		width: 100vw;
+	.overlay {
 		display: none;
 	}
 
